--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,6 @@
 			.window-item--indicator-minimized {
 				position: absolute;
 				top: 0;
-				/* bottom: 0; */
 				right: 0;
 
 				background: rgba(0, 0, 0, 0.5);
@@ -71,6 +70,16 @@
 				padding: 4px;
 				border-radius: 0px 0px 0px 4px;
 				/* border-radius: 4px 0px 0px 0px; */
+			}
+			.window-item--indicator-app {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+
+				background: hsla(240, 100%, 50%, 0.5);
+				color: white;
+				padding: 2px 0 0 2px;
+				border-radius: 4px 0px 0px 0px;
 			}
 
 			.workspace-list {
@@ -326,15 +335,15 @@
 					<span>{window.title}</span>
 
 					<WindowIsMinimizedIndicator isMinimized={isMinimized} />
+					<WindowAppIcon pid={window.pid} app={window.app} />
 				</div>
 			}
 
 			function WindowIsMinimizedIndicator({ isMinimized }) {
-				if (!isMinimized) {
-					return null;
-				}
-
-				return <span class="window-item--indicator-minimized" title="minimized">M</span>
+				return !isMinimized ? null : <span class="window-item--indicator-minimized" title="minimized">M</span>
+			}
+			function WindowAppIcon({ pid, app }) {
+				return <span class="window-item--indicator-app" title={app}>{pid}</span>
 			}
 
 			ReactDOM.render(<AppWrapper />, document.getElementById("app"));
