--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,17 @@
 				margin: 0.5rem;
 				padding: 1rem;
 			}
+			/**
+			  * when at least 1 window is selected for moving,
+			  * any space is ready to accept it.
+			  *
+			  * thus, indicate on space's hover, that windows
+			  * can be moved into it.
+			 */
+			.x--has-selected-windows .space-item:hover {
+				cursor: pointer;
+				background: linear-gradient(-40deg, hsla(0, 100%, 50%, 0.5), hsla(200, 100%, 50%, 0.5));
+			}
 
 			.window-list {
 				display: flex;
@@ -62,6 +73,8 @@
 
 				cursor: pointer;
 				user-select: none;
+
+				background: white;
 			}
 			.window-item--selected {
 				background: hsla(200, 100%, 60%, 0.5);
@@ -185,12 +198,19 @@
 				</CtxSettings.Provider>
 			};
 
-			const CtxGlobalStoreDefaultValue = { selectedWindows: [], toggleSelectWindow: () => {} };
+			const CtxGlobalStoreDefaultValue = {
+				selectedWindows: [],
+				toggleSelectWindow: () => {},
+				isWindowSelected: () => false,
+				hasSelectedWindows: () => false,
+				moveWindowsToSpace: () => {},
+			};
 			const CtxGlobalStore = createContext(CtxGlobalStoreDefaultValue);
 			const useCtxGlobalStore = () => useContext(CtxGlobalStore);
 			const CtxGlobalStoreLSKey = "ywsg.globalStore"
 			const CtxGlobalStoreProvider = ({ children }) => {
 				const [data, _setData] = useState(JSON.parse(localStorage.getItem(CtxGlobalStoreLSKey) || null) || CtxGlobalStoreDefaultValue);
+				window.globalStore = data
 				const setData = (x) => {
 					if (x instanceof Function) {
 						return _setData(oldX => {
@@ -218,13 +238,53 @@
 					if (isSelected) unselectWindow(w)
 					else selectWindow(w)
 				}
+				function hasSelectedWindows() {
+					return data.selectedWindows.length > 0
+				}
+				function moveWindowsToSpace(space, windowsToMove = data.selectedWindows) {
+					console.log("moveWindowsToSpace", {space, windowsToMove})
+
+					// for each window:
+					// - remove from current space
+					// - add to new space
+					// - sync data (indicate @ window @ which space its at)
+					// - unmark as selected if success?
+
+					// send to server to perform actual update
+
+					// handle optimistic updates?
+
+					// handle success
+					// handle failure
+
+
+					for (const w of windowsToMove) {
+						const idxOfCurrSpaceOfWindow = w.space // idx
+						//data.spaces
+
+						// TODO: globalStore data
+
+						// TODO: flatMap to get all spaces from displays hierarchy
+						// wait, flatMap won't work since we can't mutate the orig data then...
+						// need something like "walkThruObjectsUntilMatchAndModify" lol
+						// .. maybe we shouldn't store init data as hierarchy?
+						//    and instead have it flat as source of truth, from which we convert into hierarchy
+						//    when passing to subcomponents to render?
+
+						const currSpace = globalStore.initData.spaces.find(x => x.index === idxOfCurrSpaceOfWindow)
+						currSpace.windows = currSpace.windows.filter(x => x.id !== w.id)
+					}
+				}
+
 
 				const dataMemo = useMemo(() => ({
 						...data,
 						toggleSelectWindow,
 						isWindowSelected,
+						hasSelectedWindows,
+						moveWindowsToSpace,
 					}),
-					[data, toggleSelectWindow, isWindowSelected]
+					[data, toggleSelectWindow, isWindowSelected, hasSelectedWindows, moveWindowsToSpace]
 				);
 				return <CtxGlobalStore.Provider value={dataMemo}>
 					{children}
@@ -252,15 +312,20 @@
 			}
 
 			function App() {
-				const data = useFetchInitData();
+				const data = useFetchInitData(); // TODO: move into globalStore, so that can access e.g. all spaces, to e.g. move windows from current spaces to new one
 				const potentialSwappingWorkspaceData = useContextWorkspaceForPotentialSwapping();
 				const ctxSettings = useCtxSettings();
+				const globalStore = useCtxGlobalStore();
 
 				if (!data) return null;
 
 				const displayConfig = "current";
 
-				return <>
+				const className = [
+					globalStore.hasSelectedWindows() ? "x--has-selected-windows" : ""
+				].join(" ")
+
+				return <div className={className}>
 				<h2></h2>
 				<div id="toggle--show-minimized-spaces">
 					<input type="checkbox" checked={ctxSettings.showMinimized} onChange={ctxSettings.toggleShowMinimized} />
@@ -272,7 +337,7 @@
 				<AvailableWorkspaces />
 
 				<Workspace data={potentialSwappingWorkspaceData.value} config={potentialSwappingWorkspaceData.workspace} />
-				</>
+				</div>
 			}
 
 			const defaultInitData = {
@@ -378,7 +443,14 @@
 				const ctxSettings = useCtxSettings();
 				const globalStore = useCtxGlobalStore();
 
-				return <div className="space-item">
+				function handleClick(e) {
+					const hasSelectedWins = globalStore.hasSelectedWindows()
+					if (!hasSelectedWins) return;
+
+					globalStore.moveWindowsToSpace(space)
+				}
+
+				return <div className="space-item" onClick={handleClick}>
 					<span>{space.index}</span>
 
 					<ul className="window-list">
