--- a/client/index.html
+++ b/client/index.html
@@ -255,6 +255,7 @@
 						const currSpace = flatSpaces.find(x => x.index === idxOfCurrSpaceOfWindow)
 
 						currSpace.windows = currSpace.windows.filter(x => x.id !== w.id)
+						w.space = newSpace.index
 						newSpace.windows.push(w)
 					}
 
