add missing `stats` key for `defaultWorkspaceData`

--- a/client/index.html
+++ b/client/index.html
@@ -173,6 +173,7 @@
 				displays: [],
 				spaces: [],
 				windows: [],
+				stats: {},
 			};
 			function useFetchWorkspaceData(globalStore) {
 				useEffect(() => {
